--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,42 @@
 # ignore sublime-workspace files
 *.sublime-workspace
 
-#general files
-test.*
+# compiled source
+*.com
+*.class
+*.dll
 *.exe
 *.[oa]
+*.so
+
+# packages
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# logs and databases
+*.log
+*.sql
+*.sqlite
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# my custom ignores
+test.*
 *.out
 *.pdf
-*.class
-
-# keep usaco `test` files as templates
-!usaco/test.*
 
 # ignore any test folders
 test
